新增开仓平仓页

--- a/hybrid/html/local.html
+++ b/hybrid/html/local.html
@@ -31,9 +31,9 @@
         //  },
         max: 'dataMax',
         min: 'dataMin',
-        type: 'time',
+        // type: 'time',
 
-        // data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日'],
+        data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日'],
         splitLine: { show: false },
         axisLabel: { show: false },
         axisTick: { show: false },
@@ -60,7 +60,7 @@
         axisPointer: {
           type: 'cross',
           label: {
-            backgroundColor: '#f0f'
+            backgroundColor: '#6a7985'
           }
         }
       },
