--- a/hybrid/html/local.html
+++ b/hybrid/html/local.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
   <style>
-    .h556 {
+    #canvas1 {
       margin-top: 25px;
-      height: calc(100vh - 30px);
+      /* height: calc(100vh - 30px); */
+      height: 100vh;
     }
 
     body {
@@ -18,40 +20,41 @@
 </head>
 
 <body>
-  <div class="h556" id="canvas1">k线图2</div>
+  <div id="canvas1">加载中</div>
   <script src="./echarts.min.js"></script>
   <script>
-    let chart = null;
+    let chart = echarts.init(document.getElementById('canvas1'));
     var volumes = [86160000, 79330000, 102600000, 104890000, 85230000, 115230000, 99410000, 90120000, 79990000, 107100000, 81020000, 91710000, 84510000, 118160000, 89390000, 89820000, 100210000, 102720000, 134120000, 83770000, 92570000, 109090000, 100920000, 136670000, 80100000, 97060000, 95020000, 81530000, 80020000, 85590000, 75790000, 87390000, 88560000, 86640000, 88440000, 103260000, 79120000, 95530000, 111990000, 87790000, 86480000, 79180000, 68940000, 73190000, 147390000, 78530000, 75560000, 82270000, 71870000, 78750000, 71260000, 69690000, 90540000, 101690000, 93740000, 94130000, 91950000, 248680000, 99380000, 85130000, 89440000];
     var dates = ["2016-03-29", "2016-03-30", "2016-03-31", "2016-04-01", "2016-04-04", "2016-04-05", "2016-04-06", "2016-04-07", "2016-04-08", "2016-04-11", "2016-04-12", "2016-04-13", "2016-04-14", "2016-04-15", "2016-04-18", "2016-04-19", "2016-04-20", "2016-04-21", "2016-04-22", "2016-04-25", "2016-04-26", "2016-04-27", "2016-04-28", "2016-04-29", "2016-05-02", "2016-05-03", "2016-05-04", "2016-05-05", "2016-05-06", "2016-05-09", "2016-05-10", "2016-05-11", "2016-05-12", "2016-05-13", "2016-05-16", "2016-05-17", "2016-05-18", "2016-05-19", "2016-05-20", "2016-05-23", "2016-05-24", "2016-05-25", "2016-05-26", "2016-05-27", "2016-05-31", "2016-06-01", "2016-06-02", "2016-06-03", "2016-06-06", "2016-06-07", "2016-06-08", "2016-06-09", "2016-06-10", "2016-06-13", "2016-06-14", "2016-06-15", "2016-06-16", "2016-06-17", "2016-06-20", "2016-06-21", "2016-06-22"];
     var option = {
-      xAxis: [{
-        //  min: function (value) {
-        //    return 1;
-        //  },
-        max: 'dataMax',
-        min: 'dataMin',
-        // type: 'time',
+      xAxis: [
+        {
+          //  min: function (value) {
+          //    return 1;
+          //  },
+          max: 'dataMax',
+          min: 'dataMin',
+          // type: 'time',
 
-        data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日'],
-        splitLine: { show: false },
-        axisLabel: { show: false },
-        axisTick: { show: false },
-        axisLine: { show: false },
-      }, {
-        type: 'category',
-        gridIndex: 1,
-        data: dates,
-        scale: true,
-        boundaryGap: false,
-        splitLine: { show: false },
-        axisLabel: { show: false },
-        axisTick: { show: false },
-        axisLine: { show: false },
-        splitNumber: 20,
-        min: 'dataMin',
-        max: 'dataMax',
-      }
+          data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日'],
+          splitLine: { show: false },
+          axisLabel: { show: false },
+          axisTick: { show: false },
+          axisLine: { show: false },
+        }, {
+          type: 'category',
+          gridIndex: 1,
+          data: dates,
+          scale: true,
+          boundaryGap: false,
+          splitLine: { show: false },
+          axisLabel: { show: false },
+          axisTick: { show: false },
+          axisLine: { show: false },
+          splitNumber: 20,
+          min: 'dataMin',
+          max: 'dataMax',
+        }
       ],
       legend: {
         padding: 0,
@@ -121,7 +124,7 @@
             }
           },
           type: 'line',
-          symbolSize:1
+          symbolSize: 1
           // symbol: 'none'
         },
         {
@@ -140,7 +143,8 @@
         }
       ]
     }
-    echarts.init(document.getElementById('canvas1')).setOption(option);
+    chart.setOption(option);
+
   </script>
 </body>
 
