--- a/hybrid/html/local.html
+++ b/hybrid/html/local.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
     #canvas1 {
-      margin-top: 25px;
+      /* margin-top: 25px; */
       /* height: calc(100vh - 30px); */
       height: 100vh;
     }
